--- a/alpha-newsletters/build_production/alpha-gold.html
+++ b/alpha-newsletters/build_production/alpha-gold.html
@@ -46,19 +46,16 @@
       .sm-w-full {
         width: 100% !important
       }
-      .sm-px-16px {
+      .sm-px-4 {
         padding-left: 16px !important;
         padding-right: 16px !important
-      }
-      .sm-text-center {
-        text-align: center !important
       }
     }
   </style>
 </head>
 <body style="background-color: #e6e6e6; margin: 0; width: 100%; padding: 0; -webkit-font-smoothing: antialiased; word-break: break-word">
   <div role="article" aria-roledescription="email" aria-label lang="en">
-    <div class="sm-px-16px" style="font-family: Arial, sans-serif">
+    <div class="sm-px-4" style="font-family: Arial, sans-serif">
       <table align="center" style="margin: 0 auto" cellpadding="0" cellspacing="0" role="none">
         <tr>
           <td style="width: 650px; max-width: 100%">
@@ -77,6 +74,24 @@
                             </td>
                           </tr>
                         </table>
+                        <table class="sm-table" style="display: none; width: 100%" cellpadding="0" cellspacing="0" role="none">
+                          <tr>
+                            <td>
+                              <div role="separator" style="line-height: 20px">&zwj;</div>
+                            </td>
+                          </tr>
+                        </table>
+                        <table align="right" width="93" class="sm-w-full sm-float-none" style="float: right; border-style: none" cellpadding="0" cellspacing="0" role="none">
+                          <tbody>
+                            <tr>
+                              <td align="center">
+                                <a href="https://www.alpha.gr/el/gold/gold-personal-banking/?utm_source=newsletter&utm_medium=CVDM&utm_campaign=alpha-welcome-gold" target="_blank">
+                                  <img src="images/gold-logo-personal-transparent.png" width="93" alt="Alpha Bank" style="vertical-align: middle; width: 93px; max-width: 100%; max-height: 53px">
+                                </a>
+                              </td>
+                            </tr>
+                          </tbody>
+                        </table>
                       </td>
                     </tr>
                   </table>
@@ -84,39 +99,10 @@
                   <div role="separator" style="line-height: 30px">&zwj;</div>
                   <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
                     <tr>
-                      <td>
-                        <table style="width: 240px; float: right;" cellpadding="0" cellspacing="0" role="none">
-                          <tr>
-                            <td width="34" style="width: 34px">
-                              <img src="images/gear-mass.png" width="24" height="24" alt="Gear Icon" style="max-width: 100%; vertical-align: middle; display: block; margin: 0 auto; width: 24px; height: 24px">
-                            </td>
-                            <td style="color: #ababab; font-size: 11px; line-height: 14px;">
-                              Αριθμός Πελάτη: %%CDI_Masked%%<br>%%Surname%% %%Name%%
-                            </td>
-                          </tr>
-                        </table>
-                      </td>
-                    </tr>
-                  </table>
-                  <div role="separator" style="line-height: 30px">&zwj;</div>
-                  <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
-                    <tr>
                       <td align="center">
                         <a href="https://maizzle.com?utm_source=newsletter&amp;utm_medium=CVDM&amp;utm_campaign=alpha-welcome-gold" target="_blank" style="display: inline-block">
                           <img src="images/btn.png" width="208px" height="auto" max-width="100%" border="none" max-height="52px" style="max-width: 100%; vertical-align: middle; margin-left: auto; margin-right: auto; display: block" alt="Alpha Bank Gold Personal Banking">
                         </a>
-                      </td>
-                    </tr>
-                  </table>
-                  <div role="separator" style="height: 1px; line-height: 1px; background-color: #EBEBEB; margin: 50px 0">&zwj;</div>
-                  <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
-                    <tr style="vertical-align: top;">
-                      <td align="center" width="{{width}}">
-                        <img src="images/check.png" width="26" style="vertical-align: middle; width: 26px; max-height: 26px; max-width: 100%; margin-left: auto; margin-right: auto; display: block" alt="Alpha Bank Gold Personal Banking">
-                      </td>
-                      <td width="15px"></td>
-                      <td>
-                        έως 20% έκπτωση στον &amp;lt;a href=&quot;#&quot;&amp;gt;lorem ipsum&amp;lt;/a&amp;gt; με το πλήρες πακέτο καλύψεων
                       </td>
                     </tr>
                   </table>
@@ -141,41 +127,38 @@
                       </td>
                     </tr>
                     <tr>
+                      <td style="padding-left: 20px; padding-right: 20px">
+                        <table class="{{bgColor}}" style="width: 100%" cellpadding="0" cellspacing="0" role="none">
+                          <tr>
+                            <td>
+                              <table align="left" width="276px" class="sm-mb-4 sm-w-full sm-float-none" style="float: left; border-style: none" cellpadding="0" cellspacing="0" role="none">
+                                <tr>
+                                  <td align="center"> <a href="https://apps.apple.com/gr/app/myalpha-mobile/id378674531?l=el?utm_source=newsletter&utm_medium=CVDM&utm_campaign=alpha-welcome-gold" target="_blank">
+                                      <img src="images/by-mobile.png" width="276" style="vertical-align: middle; width: 276px; max-height: 118px; max-width: 100%; display: block" alt="Alpha Bank Gold Personal Banking">
+                                    </a>
+                                  </td>
+                                </tr>
+                              </table>
+                              <table align="right" width="276px" class="sm-w-full sm-float-none" style="float: right; border-style: none" cellpadding="0" cellspacing="0" role="none">
+                                <tbody>
+                                  <tr>
+                                    <td align="center"> <a href="https://secure.alpha.gr/auth/ebanking/id/login?login_challenge=e793f555633042501294a32166291377&amp;lang=el" target="_blank" style="display: block">
+                                        <img src="images/by-pc.png" width="276" style="vertical-align: middle; width: 276px; max-height: 118px; max-width: 100%" alt="Alpha Bank Gold Personal Banking">
+                                      </a>
+                                    </td>
+                                  </tr>
+                                </tbody>
+                              </table>
+                            </td>
+                          </tr>
+                        </table>
+                      </td>
+                    </tr>
+                    <tr>
                       <td style="padding-left: 24px; padding-right: 24px; padding-top: 24px">
                         <p style="color: #11366B; margin: 0; text-align: center; font-size: 16px; line-height: 24px">
                           Επιλέξτε στο μενού την ενότητα Νέα Προϊόντα > Ασφάλεια.
                         </p>
-                      </td>
-                    </tr>
-                  </table>
-                  <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
-                    <tr>
-                      <td style="{{ styles }}">
-                        {{ props.text }}
-                      </td>
-                    </tr>
-                  </table>
-                  <table style="width: 100%; background-color: #f0f3fd" cellpadding="0" cellspacing="0" role="none">
-                    <tr>
-                      <td style="padding-left: 20px; padding-right: 20px; padding-top: 20px;">
-                        <table align="left" width="276px" class="sm-mb-4 sm-w-full sm-float-none" style="float: left; border-style: none" cellpadding="0" cellspacing="0" role="none">
-                          <tr>
-                            <td align="center"> <a href="https://apps.apple.com/gr/app/myalpha-mobile/id378674531?l=el?utm_source=newsletter&utm_medium=CVDM&utm_campaign=alpha-welcome-gold" target="_blank">
-                                <img src="images/by-mobile.png" width="276" style="vertical-align: middle; width: 276px; max-height: 118px; max-width: 100%; display: block" alt="Alpha Bank Gold Personal Banking">
-                              </a>
-                            </td>
-                          </tr>
-                        </table>
-                        <table align="right" width="276px" class="sm-w-full sm-float-none" style="float: right; border-style: none" cellpadding="0" cellspacing="0" role="none">
-                          <tbody>
-                            <tr>
-                              <td align="center"> <a href="https://secure.alpha.gr/auth/ebanking/id/login?login_challenge=e793f555633042501294a32166291377&amp;lang=el" target="_blank" style="display: block">
-                                  <img src="images/by-pc.png" width="276" style="vertical-align: middle; width: 276px; max-height: 118px; max-width: 100%" alt="Alpha Bank Gold Personal Banking">
-                                </a>
-                              </td>
-                            </tr>
-                          </tbody>
-                        </table>
                       </td>
                     </tr>
                   </table>
@@ -191,16 +174,11 @@
                     </tr>
                   </table>
                   <div role="separator" style="line-height: 30px">&zwj;</div>
-                  <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
+                  <table class="{{bgColor}}" style="width: 100%" cellpadding="0" cellspacing="0" role="none">
                     <tr>
-                      <td style="padding-bottom: 16px">
-                        <h2 class="sm-text-center" style="color: #11366B; margin-bottom: 0; margin-top: 0; text-align: left; font-size: 18px; line-height: 27px">
-                          Είμαστε δίπλα σας
-                        </h2>
+                      <td style="text-align: left; font-size: 18px; line-height: 27px; font-weight: bold; color: #11366B; padding-bottom: 16px;">
+                        Είμαστε δίπλα σας
                       </td>
-                    </tr>
-                    <tr>
-                      <td> </td>
                     </tr>
                   </table>
                   <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
@@ -316,6 +294,34 @@
                   </table>
                   <div role="separator" style="height: 1px; line-height: 1px; background-color: #EBEBEB; margin: 24px 0">&zwj;</div>
                   <div role="separator" style="line-height: 30px">&zwj;</div>
+                  <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
+                    <tr>
+                      <td style="padding-bottom: 16px">
+                        <h2 style="color: #11366B; margin-bottom: 0; margin-top: 0; text-align: left; font-size: 10px; line-height: 14px">
+                          Είμαστε δίπλα σας
+                        </h2>
+                        <p style="color: #616161; margin-top: 16px; margin-bottom: 16px; text-align: left; font-size: 10px; line-height: 14px">You have received this message from alpha@crm.alpha.gr, because you have consented to receive communications regarding new products and/or services from Alpha Bank.</p>
+                        <p style="color: #616161; margin-top: 16px; margin-bottom: 16px; text-align: left; font-size: 10px; line-height: 14px">Respecting our customer’s personal data, we inform you that, according to the General Data Protection Regulation (GDPR), you have the right to change your preference at any time. This can be done, through our website www.alpha.gr, via myAlpha Web/Mobile banking or by visiting the branch you conduct business with.</p>
+                        <p style="color: #616161; margin-top: 16px; margin-bottom: 16px; text-align: left; font-size: 10px; line-height: 14px">For security reasons, each electronic communication will include your full name/corporate name and the last two digits of your Customer Number which is unique in our systems. Alpha Bank will never ask for your passwords in any way (e.g. via phone, email). They are strictly personal and should not be disclosed to anyone.</p>
+                        <p style="color: #616161; margin-top: 16px; margin-bottom: 16px; text-align: left; font-size: 10px; line-height: 14px">Please do not answer this email. If you do not wish to receive emails from Alpha Bank, please click here.</p>
+                      </td>
+                    </tr>
+                  </table>
+                  <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
+                    <tr>
+                      <td>
+                        <table align="left" width="172" class="sm-w-full sm-float-none" style="float: left; border-style: none" cellpadding="0" cellspacing="0" role="none">
+                          <tr>
+                            <td align="center">
+                              <div role="separator" style="line-height: 10px" class="sm-hidden">&zwj;</div> <a href="https://www.alpha.gr/?utm_source=newsletter&utm_medium=CVDM&utm_campaign=alpha-welcome-gold" target="_blank">
+                                <img src="images/alpha_logo.png" width="172" alt="Alpha Bank" style="vertical-align: middle; width: 172px; max-width: 100%; max-height: 32px">
+                              </a>
+                            </td>
+                          </tr>
+                        </table>
+                      </td>
+                    </tr>
+                  </table>
                   <div role="separator" style="line-height: 30px">&zwj;</div>
                 </td>
               </tr>
